--- a/pqHelp.html
+++ b/pqHelp.html
@@ -76,7 +76,7 @@ see the file <tt>COPYING.TXT</tt> in the distribution folder. Qt itself is licen
 <li>When you save a file that should be encoded Latin-1, PPQT checks the file contents, and if it contains a non-Latin-1 character, it warns you and you must either save in UTF, or cancel the save.</li>
 <li>When you select a file to open, and PPQT can't determine its character encoding, you get a warning dialog. You can specify Latin-1 or UTF encoding, or cancel.</li>
 <li>You now specify an alternate spelling dictionary with syntax that is valid HTML, replacing the nonstandard syntax previously used. See <a href='#Spellcheck'>Spellcheck</a>.</li>
-<li>The keystrokes for inserting and jumping to line numbers in the Notes tab have been changed from alt-ctl-L and ctl-L to alt-ctl-n and ctl-n, to avoid conflict with the Edit menu where ctl-L means change selection to lowercase.</li>
+<li>The keystrokes for inserting and jumping to line numbers in the Notes tab have been changed from alt-ctl-L and ctl-L to alt-ctl-m and ctl-m, to avoid conflict with the Edit menu where ctl-L means change selection to lowercase.</li>
 <li>Annnnnddd... it's version 1.2. The accumulated tweaks and fixes add up to enough to call this a new version. Also this is likely the last version before version 2.0.</li>
 </ul>
 <h2 id='Files'>Files and Folders</h2>
@@ -222,12 +222,12 @@ The <i>dict_tag</i> must be one of the dictionary tags (filenames) displayed by 
 <h2 id='Notes'>The Notes Panel</h2>
 <p>Click the Notes tab. This panel is a simple plain-text editor to hold notes on the book in progress. Whatever contents you type here are saved
 in the <tt>.meta</tt> file and reloaded with the book.</p>
-<p>When the focus is in the Notes panel, the alt-ctl-n key causes the
+<p>When the focus is in the Notes panel, the alt-ctl-m key causes the
 current line number of the Edit panel cursor position to be entered, in curly braces: <tt>{1475}</tt>. The alt-ctl-p key causes the current scan image number to be entered in square brackets: <tt>[214]</tt>. Use these keys to relate your notes to locations in the book, for example <blockquote>
 <tt>oe lig near {1475} <br />
 big table on [214]</tt>.</blockquote>
 </p><p>
-Place the cursor in or to the right of a {nnn} line number in the notes and key ctl-n. The Edit panel cursor jumps to that line. Place the cursor in or to the right of a [ppp] page number and key ctl-p. The Edit panel cursor jumps to the top of that page's text.</p>
+Place the cursor in or to the right of a {nnn} line number in the notes and key ctl-m. The Edit panel cursor jumps to that line. Place the cursor in or to the right of a [ppp] page number and key ctl-p. The Edit panel cursor jumps to the top of that page's text.</p>
 <p>Key ctl-f for a simple Find dialog for searching in the notes.
 If text is selected, it is pre-loaded in the find-text field. The search
 starts at the cursor and wraps around at the end of the notes.</p>
